# djangoAplicationTracker

./: .env.example  .gitignore  README.md  db.sqlite3  main.py  production.txt  pyproject.toml  requirements.txt
application/: admin.py  models.py  serializers.py  urls.py  views.py
application/migrations/: 0001_initial.py
auth/: __init__.py  serializers.py
config/: settings.py  urls.py
